<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MobileInvestApp</string>
    <string name="splash_logo_text">Your mobile investment</string>
    <string name="idea_fragment">Idea fragment</string>
    <string name="search_hint_text">Find company or ticker</string>
    <string name="news_of_the_week">Новости за неделю</string>
    <string name="test_headline">Intel\'s latest desktop chip is underwhelming; this has been the story of Intel chips in the past few years and continues to be a headwind for the company.</string>
    <string name="no_news">В настоящий момент по данной бумаге нет новостей</string>
    <string name="date_public">Дата публикации:</string>
    <string name="source_news">Источник:</string>
    <string name="popular_requests">Popular requests</string>
    <string name="searched_for_this">You\'ve searched for this</string>
    <string name="add_favorite">добавлен в избранное</string>
    <string name="delete_favorite">удален из избранного</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="table_layout_favorite">Favourite</string>
    <string name="table_layout_stocks">Stocks</string>
    <string name="snackbar_text_action">Retry</string>
    <string name="table_layout_summary">Summary</string>
    <string name="table_layout_chart">Chart</string>
    <string name="table_layout_news">News</string>
    <string name="table_layout_forecast">Forecast</string>
    <string name="table_layout_idea">Idea</string>
    <string name="data_not_found">Data not found</string>
    <string name="forecast_fragment">Forecast fragment</string>
    <string name="m">M</string>
    <string name="_6m">6M</string>
    <string name="_1y">1Y</string>
    <string name="all">ALL</string>
    <string name="w">W</string>
    <string name="d">D</string>
    <string name="clear_search">Clear history</string>
</resources>