<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="125$" />

    <TextView
        android:id="@+id/text_diff_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_price"
        tools:text="125$" />


    <ImageView
        android:id="@+id/image_chart"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitXY"
        android:src="@drawable/chart_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_diff_price" />

    <LinearLayout
        android:id="@+id/chart_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@id/buy_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_chart">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chart_chip_groupe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                style="@style/Chart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d" />

            <com.google.android.material.chip.Chip
                style="@style/Chart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/w" />


            <com.google.android.material.chip.Chip
                style="@style/Chart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m" />

            <com.google.android.material.chip.Chip
                style="@style/Chart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_6m" />

            <com.google.android.material.chip.Chip
                style="@style/Chart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1y" />

            <com.google.android.material.chip.Chip
                style="@style/Chart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all" />

        </com.google.android.material.chip.ChipGroup>

    </LinearLayout>

    <Button

        android:id="@+id/buy_button"
        style="@style/Buy"
        android:layout_width="328dp"
        android:layout_height="56dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Buy for $128.25" />

</androidx.constraintlayout.widget.ConstraintLayout>