<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_news_view"
    style="@style/CardViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="5dp"
    android:clickable="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.elyeproj.loaderviewlibrary.LoaderImageView
            android:id="@+id/image_news_loader"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/barrier"
            app:layout_constraintEnd_toStartOf="@id/image_barrier" />

        <ImageView
            android:id="@+id/image_news"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/barrier"
            app:layout_constraintEnd_toStartOf="@id/image_barrier"
            tools:src="@drawable/yandex" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/image_barrier"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:barrierDirection="end"
            app:constraint_referenced_ids="image_news, image_news_loader"/>

        <TextView
            android:id="@+id/text_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="viewStart"
            android:layout_marginBottom="15dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintHorizontal_bias="0"
            android:fontFamily="@font/montserrat_bold"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintBottom_toBottomOf="@id/barrier"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/image_barrier"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/test_headline" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="text_headline" />

        <TextView
            android:id="@+id/text_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/source_news"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/text_source_news"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier" />

        <TextView
            android:id="@+id/text_source_news"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_source"
            tools:text="@string/source_news" />

        <TextView
            android:id="@+id/text_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/date_public"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/text_date_public"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier" />

        <TextView
            android:id="@+id/text_date_public"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montserrat"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_date"
            tools:text="10-03-2021" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>