<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.StocksFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        style="@style/AppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:focusableInTouchMode="true"
            android:layout_marginEnd="16dp"
            style="@style/TextInputLayoutStyle"
            app:hintEnabled="false"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:hint="@string/search_hint_text"
                android:inputType="textImeMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            style="@style/TabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:tabGravity="start"
            app:tabMode="scrollable" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager_stocks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


    <LinearLayout
        android:id="@+id/root_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/popular_request_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="11dp"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/popular_requests"
            android:textAppearance="@android:style/TextAppearance.Material.Headline"
            android:textStyle="bold" />


        <HorizontalScrollView
            android:id="@+id/scroll_flow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:orientation="vertical">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/popular_group_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:chipSpacingHorizontal="4dp"
                    app:singleLine="true">

                    <com.google.android.material.chip.Chip
                        style="@style/Chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="JNJ" />

                    <com.google.android.material.chip.Chip
                        style="@style/Chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Microsoft" />


                    <com.google.android.material.chip.Chip
                        style="@style/Chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Nike" />


                    <com.google.android.material.chip.Chip
                        style="@style/Chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Starbucks" />

                    <com.google.android.material.chip.Chip
                        style="@style/Chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Texas" />

                    <com.google.android.material.chip.Chip
                        style="@style/Chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Tesla" />

                    <com.google.android.material.chip.Chip
                        style="@style/Chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Broadcom" />

                    <com.google.android.material.chip.Chip
                        style="@style/Chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Oracle" />

                </com.google.android.material.chip.ChipGroup>

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/popular_group_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:chipSpacingHorizontal="4dp"
                    app:singleLine="true">

                    <com.google.android.material.chip.Chip
                        style="@style/Chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Apple" />

                    <com.google.android.material.chip.Chip
                        style="@style/Chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Colgate" />


                    <com.google.android.material.chip.Chip
                        style="@style/Chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Alibaba" />


                    <com.google.android.material.chip.Chip
                        style="@style/Chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Uber" />

                    <com.google.android.material.chip.Chip
                        style="@style/Chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Boeing" />

                    <com.google.android.material.chip.Chip
                        style="@style/Chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Alphabet" />

                    <com.google.android.material.chip.Chip
                        style="@style/Chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Nvidia" />

                    <com.google.android.material.chip.Chip
                        style="@style/Chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Micron" />

                    <com.google.android.material.chip.Chip
                        style="@style/Chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Amazon" />

                </com.google.android.material.chip.ChipGroup>

            </LinearLayout>

        </HorizontalScrollView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/searched_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="28dp"
                android:textSize="18sp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/searched_for_this"
                android:textAppearance="@android:style/TextAppearance.Material.Headline"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/clear_search_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/searched_text"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="10dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/montserrat"
                android:text="@string/clear_search"
                android:textAppearance="@android:style/TextAppearance.Material.Button"
                android:textSize="10sp"
                android:textStyle="bold"
                tools:ignore="SmallSp" />

        </RelativeLayout>


        <HorizontalScrollView
            android:id="@+id/scroll_flow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/searched_group_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:chipSpacingHorizontal="4dp"
                    app:singleLine="true">

                </com.google.android.material.chip.ChipGroup>

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/searched_group_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:chipSpacingHorizontal="4dp"
                    app:singleLine="true">

                </com.google.android.material.chip.ChipGroup>

            </LinearLayout>

        </HorizontalScrollView>


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>